# 13_eclaireur_public

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  Taskfile.yml  docker-compose.yaml  package-lock.json  package.json  pyproject.toml  tox.ini
.github/workflows/: backstop.yml  lost-pixel.yml  playwright.yml  pre-commit.yaml  review.yml  run-main.yaml  test-run.yaml
back/: README.md  config-test.yaml  config.yaml  main.py
back/data/cpv_labels/: cpv_2008.xls
back/scripts/communities/: communities_selector.py
back/scripts/datasets/: communities_contacts.py  communities_financial_accounts.csv  communities_financial_accounts.py  constants.py  cpv_labels.py  datafile_loader.py  datafiles_loader.py  datagouv_catalog.py  datagouv_catalog_columns.txt  datagouv_searcher.py  dataset_aggregator.py  declaration_interet.py  elected_officials.py  marches.py  normalization_financial_account_columns.csv  odf.csv  ofgl_urls.csv  single_urls_builder.py  sirene.py  topic_aggregator.py  utils.py
back/scripts/enrichment/: bareme_enricher.py  base_enricher.py  communities_enricher.py  elected_officials_enricher.py  financial_account_enricher.py  marches_enricher.py  subventions_enricher.py
back/scripts/loaders/: __init__.py  base_loader.py  csv_loader.py  excel_loader.py  json_loader.py  parquet_loader.py  utils.py  xml_loader.py  zip_loader.py
back/tests/: select_test_citites.py  test_utils_dataframe_operation.py
docs/: glossaire.md
front/: .gitignore  README.md  backstop.config.js  components.json  eslint.config.mjs  lostpixel.config.ts  package.json  playwright.config.ts  prettier.config.js  prettier.confit.ts  tailwind.config.ts  tsconfig.json
front/.storybook/: main.ts  preview.ts
front/app/: Providers.tsx  error.tsx  globals.css  layout.tsx  not-found.tsx  page.tsx  robots.tsx
front/components/: ContactForm.tsx  ErrorPage.tsx  Footer.tsx  FranceMap.tsx  HomePageHeader.tsx  HomepageHeader.tsx  Navbar.tsx  ProjectDescription.tsx  SearchBar.tsx  SelectCommunityType.tsx  footer.tsx  navbar.tsx
front/tests/: README.md  homepage.spec.ts
front/utils/: constants.ts  db.ts  nodeStreamToStream.ts  send-email.ts  types.ts  utils.ts
tests/back/: test_config_structure.py
(+398 files in other folders)
